--- a/lib/glcomp/Makefile.am
+++ b/lib/glcomp/Makefile.am
@@ -4,6 +4,7 @@
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/lib/common \
+	-llibglut
 	$(GTK_CFLAGS) $(GTKGL_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS)
 
 if WITH_SMYRNA
