--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -137,7 +137,8 @@ BuildRequires: librsvg2-devel
 %define PHP 1
 %define GDK_PIXBUF 1
 #%define SMYRNA 1
-#BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel gts-devel
+#BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
+#BuildRequires: freeglut-devel gts-devel
 BuildRequires: gd gd-devel perl-devel php-devel
 %endif
 %endif
@@ -198,7 +199,8 @@ BuildRequires: R-devel swig >= 1.3.33
 # packaging is ok, but code is not ready for distribution
 #
 #define SMYRNA 1
-# BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel gts-devel
+# BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel
+# BuildREquires: freeglut-devel gts-devel
 #define GLITZ 1
 # BuildRequires: glitz-devel
 %endif
@@ -260,7 +262,8 @@ BuildRequires: librsvg2-devel
 %define SFDP 1
 %define LASI 1
 BuildRequires: gd gd-devel perl-devel DevIL-devel lasi-devel
-BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel gts-devel
+BuildRequires: gtkglarea2-devel gtkglext-devel glade3-libgladeui-devel 
+BuildRequires: freeglut-devel gts-devel
 %endif
 %if %att_fedora >= 8
 %define R_LANG 1
