fixing glut.h stuff

--- a/lib/glcomp/Makefile.am
+++ b/lib/glcomp/Makefile.am
@@ -4,22 +4,19 @@
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/lib/common \
-	-llibglut
-	$(GTK_CFLAGS) $(GTKGL_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS)
+	$(GTK_CFLAGS) $(GLUT_CFLAGS) $(GTKGL_CFLAGS) $(GTKGLEXT_CFLAGS) $(GLADE_CFLAGS) $(FREETYPE2_CFLAGS)
 
 if WITH_SMYRNA
 noinst_HEADERS = glcompbutton.h glcompdefs.h glcomplabel.h \
 	glcomppanel.h glcompset.h glcomptexture.h \
 	glCompTrackBar.h glpangofont.h glcomptextpng.h\
-	glcomptext.h \
-	glutils.h
+	glcomptext.h glutils.h
 
 noinst_LTLIBRARIES = libglcomp_C.la
 endif
 
 libglcomp_C_la_SOURCES = glcompbutton.c glcomplabel.c \
 	glcomppanel.c glcompset.c glcomptexture.c glcomptextpng.c\
-	glCompTrackBar.c glpangofont.c glcomptext.c \
-	glutils.c 
+	glCompTrackBar.c glpangofont.c glcomptext.c glutils.c 
 
 EXTRA_DIST = glcomp.vcproj
