drop gtk+ - unable to build add jpeg support to gd - and ready for gtk+ add tiff support - ready for gtk+

--- a/macosx/prebuild/.cvsignore
+++ b/macosx/prebuild/.cvsignore
@@ -1,12 +1,17 @@
+atk-*
 cairo-*
+fontconfig-*
+freetype-*
 gd-*
 gettext-*
 glib-*
+gtk+-*
+gts-*
+libXft-*
 libiconv-*
 libpng-*
+jpeg*
 pango-*
 pixman-*
-fontconfig-*
-freetype-*
 pkg-config-*
-libXft-*
+tiff-*
