Forgot to commit new files

--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -18,7 +18,7 @@ noinst_HEADERS = btree.h draw.h filter.h glexpose.h glmotion.h gltemplate.h \
 	topviewdata.h topviewdefs.h trackball.h tvnodes.h viewport.h \
 	topfisheyeview.h viewportcamera.h \
 	gui/callbacks.h gui/datalistcallbacks.h gui/filterscallbacks.h \
-	gui/glmenu.h gui/gui.h gui/menucallbacks.h gui/toolboxcallbacks.h \
+	gui/glmenu.h gui/gui.h gui/menucallbacks.h gui/toolboxcallbacks.h md5.h \
 	gui/topviewsettings.h gui/beacon.h
 if WITH_SMYRNA
 bin_PROGRAMS = smyrna
@@ -29,7 +29,7 @@ smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	topfisheyeview.c trackball.c tvnodes.c viewport.c viewportcamera.c \
     gui/beacon.c gui/callbacks.c gui/datalistcallbacks.c \
     gui/filterscallbacks.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
-    gui/toolboxcallbacks.c gui/topviewsettings.c
+    gui/toolboxcallbacks.c gui/topviewsettings.c md5.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/cdt/libcdt_C.la \
