don't list dir twice in subdirs.  it breaks "make distclean"

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,7 +4,6 @@
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
 	vpsc rbtree ortho sparse patchwork expr common \
 	pack gvc xdot ingraphs topfish glcomp \
-	circogen dotgen fdpgen neatogen twopigen sfdpgen \
-	glcomp topfish xdot
+	circogen dotgen fdpgen neatogen twopigen sfdpgen
 
 EXTRA_DIST = Makefile.old gvc.vcproj gvc.def
