more smyrna improvemenets including windows gvpr support, mouse wheel zoom

--- a/cmd/smyrna/smyrna.vcproj
+++ b/cmd/smyrna/smyrna.vcproj
@@ -354,6 +354,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\gvprpipe.c"
+				>
+			</File>
+			<File
 				RelativePath=".\hier.c"
 				>
 			</File>
