--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -52,8 +52,8 @@ libgvc_C_la_LIBADD += $(top_builddir)/lib/ortho/libortho_C.la
 libgvc_C_la_DEPENDENCIES +=  $(top_builddir)/lib/ortho/libortho_C.la
 endif
 if ENABLE_LTDL
-libgvc_C_la_LIBADD += $(top_builddir)/libltdl/libltdlc.la
-libgvc_C_la_DEPENDENCIES += $(top_builddir)/libltdl/libltdlc.la
+libgvc_C_la_LIBADD += $(LIBLTDL)
+libgvc_C_la_DEPENDENCIES += $(LIBLTDL)
 endif
 
 libgvc_la_LDFLAGS = -version-info $(GVC_VERSION) -no-undefined
